--- a/content/payments/billpay/api-integration/objects.mdx
+++ b/content/payments/billpay/api-integration/objects.mdx
@@ -183,7 +183,7 @@ The Payment Bill object contains information about a specific bill to be paid.
 | `DEFAULT_RESOLVED` | If no action is taken by Biller/BBPOU then NPCI automatically resolves the dispute in favour of the customer.                                          |
 | `REFUNDED`         | Refund successfully processed and completed in favour of the customer.                                                                          |
 | `PENDING_REFUND`   | Refund approved and currently being processed.                                                                 |
-| `FAILED`   | Dispute failed to be raised with NPCI due to technical or network errors.                                                                 |
+| `FAILED`   | The dispute could not be raised with NPCI due to technical or network issues.                                                                 |
 
 ## Bill Period
 
