tools and prompts

--- a/content/payments/billpay/mcp/integration-guide.mdx
+++ b/content/payments/billpay/mcp/integration-guide.mdx
@@ -5,7 +5,7 @@ order: 1
 visible_in_sidebar: true
 ---
 
-## MCP for Bill Payments - Integration guide
+## Agentic Bill Payments - MCP Server - Integration guide
 
 Currently live on ChatGPT and Claude, as other LLM providers don't allow for custom connectors. All bill payments require a phone number/OTP to fetch bills.
 
@@ -91,49 +91,7 @@ Ensure you have at least a Claude Pro account, and installed a Claude Desktop.
 
 You are ready! 
 
-### Cursor
-
-1. Ensure you have Cursor installed and running.
-2. **Open Cursor** → start a chat with cursor agent -> click on three dots at the top left of agent chat.
-    <ol type="a">
-      <li><strong>Agent Settings &gt; Tools &amp; MCP &gt; New MCP Server.</strong> This will open the mcp server mcp.json file.</li>
-    </ol>
-3. Add the following JSON to existing or empty file (include other mcp servers alongside as needed):
-
-<CodeBlockWithCopy language="json">{`
-{
-  "mcpServers": {
-  .
-  . other mcp servers
-  .
-  "cou-mcp-server": {
-      "command": "npx",
-      "args" : [
-        "mcp-remote",
-        "https://billpay-mcp.setu.co/mcp"
-      ]
-    }
-  }
-}
-`}</CodeBlockWithCopy>
-
-4. **Verify your phone number with an OTP**
-5. On confirming, you will be taken to a page to enter your phone number and OTP. All bill payments require a phone number to fetch bills.
-6. Start Chatting!
-   <ol type="a">
-     <li>Make bill payments while coding.</li>
-     <li>Make agents that can use the <i>Setu Bill Payments MCP</i>.</li>
-     <li>For code level agents go to Get Started - <a href="https://billpay-mcp.setu.co/login" target="_blank" rel="noreferrer">Setu Bill Payments</a>.</li>
-       <li>Generate token using a mobile number.
-      <MainImage src="https://storage.googleapis.com/strapi-assets/latest/MCP_for_bill_payment/cursor-authentication.png" alt="Cursor Authentication successful" /></li>
-      <li>Use token fetch API to get token.</li>
-      <MainImage src="https://storage.googleapis.com/strapi-assets/latest/MCP_for_bill_payment/cursor-token-fetch.png" alt="Cursor Token Fetch"/>
-      <li>Use this token to call the /mcp endpoints for tools and no need to implement OAuth user redirect implementation.</li>
-   </ol>
-
 Claude / ChatGPT and other GUI clients will always implement that OAuth redirect to remote auth service implementations so Client ID or Secret is not to be used there.
-
-You are ready! 
 
 ### Using the MCP
 
