--- a/content/payments/billpay/mcp/tools-and-prompts.mdx
+++ b/content/payments/billpay/mcp/tools-and-prompts.mdx
@@ -1,6 +1,6 @@
 ---
-sidebar_title: Tools and Prompt
-page_title: MCP for Bill Payments - Tools and Prompt
+sidebar_title: Tools and Prompts
+page_title: MCP for Bill Payments - Tools and Prompts
 order: 2
 visible_in_sidebar: true
 ---
