--- a/content/payments/billpay/mcp/integration-guide.mdx
+++ b/content/payments/billpay/mcp/integration-guide.mdx
@@ -1,6 +1,6 @@
 ---
 sidebar_title: Integration Guide
-page_title: MCP for Bill Payments - Integration Guide
+page_title: MCP Sever for Bill Payments - Integration Guide
 order: 1
 visible_in_sidebar: true
 ---
