--- a/content/payments/billpay/mcp/tools-and-prompts.mdx
+++ b/content/payments/billpay/mcp/tools-and-prompts.mdx
@@ -1,6 +1,6 @@
 ---
 sidebar_title: Tools and Prompts
-page_title: MCP for Bill Payments - Tools and Prompts
+page_title: MCP Server for Bill Payments - Tools and Prompts
 order: 2
 visible_in_sidebar: true
 ---
@@ -72,3 +72,7 @@ Use these to plan and budget.
 
 - "How much should I budget for bills every month?"
 - "Which of my bills are fixed and which vary?"
+
+<Callout type="info">
+📄 Read more about how we came up with this MCP server <a href="https://blog.setu.co/articles/Setu-Bill-Payments-MCP" target="_blank" rel="noreferrer">here</a>!
+</Callout>
